--- a/parts/client/dao.jade
+++ b/parts/client/dao.jade
@@ -1,7 +1,7 @@
 template(name='dao')
     .ui.stackable.grid
         .row
-            .sixteen.wide.center.aligned.column
+            .twelve.wide.center.aligned.column
                 if skv_is 'thinking' true
                     i.big.yin.yang.loading.icon
                 // unless viewing_doc
@@ -17,17 +17,6 @@ template(name='dao')
                     input.search_title(type='text' autofocus='')
                 each tag_results
                     +tag_selector
-                +view_mode k='twitter' i='twitter' c='blue'
-                +view_mode k='video' i='youtube' c='red'
-                +view_mode k='image' i='picture' c='green'
-                +view_mode k='posts' i='newspaper' c='teal'
-                +view_mode k='wikipedia' i='wikipedia' c='purple'
-                +view_mode k='stackexchange' i='stack exchange disabled'
-                +view_mode k='github' i='github disabled'
-                +view_mode k='alpha' i='disabled brain'
-                +view_mode k='porn' i='mercury'
-                +view_mode k='bitcoin' i='bitcoin disabled'
-                +view_mode k='covid' i='covid disabled'
                 // .ui.header 
                 //     i.smile.large.grey.icon
                 //     |emotion
@@ -46,6 +35,9 @@ template(name='dao')
                             |#{name}
                 .ui.large.basic.label(title='results') #{doc_count} results
                 .spacer
+                // .five.wide.right.aligned.column
+                // .eleven.wide.column
+            .four.wide.center.aligned.column
                 .ui.inline.header 
                     i.users.large.grey.icon
                     |group
@@ -67,8 +59,18 @@ template(name='dao')
                         |#{name}
                 i.smile.large.icon
                 div
-                // .five.wide.right.aligned.column
-                // .eleven.wide.column
+            .four.wide.center.aligned.column
+                +view_mode k='twitter' i='twitter' c='blue'
+                +view_mode k='video' i='youtube' c='red'
+                +view_mode k='image' i='picture' c='green'
+                +view_mode k='posts' i='newspaper' c='teal'
+                +view_mode k='wikipedia' i='wikipedia' c='purple'
+                +view_mode k='stackexchange' i='stack exchange disabled'
+                +view_mode k='github' i='github disabled'
+                +view_mode k='alpha' i='disabled brain'
+                // +view_mode k='porn' i='mercury'
+                +view_mode k='bitcoin' i='bitcoin disabled'
+                +view_mode k='covid' i='covid disabled'
             .eight.wide.column
                 with search_doc
                     .ui.segment
@@ -92,10 +94,10 @@ template(name='dao')
                                 i.large.brain.icon
                                 if response.queryresult
                                     +alpha 
-                    // if many_tags
-                    //     each alpha_singles
-                    //         if response.queryresult
-                    //             +alpha 
+                        // if many_tags
+                        //     each alpha_singles
+                        //         if response.queryresult
+                        //             +alpha 
                     if skv_is 'loading_duck' true
                         i.big.globe.loading.icon 
                         |duck duck go...
@@ -104,37 +106,37 @@ template(name='dao')
                             each ducks
                                 .ui.segment
                                     +duck 
-                // div(class="{{#unless viewing_doc}} eleven wide column {{else}} sixteen wide column {{/unless}}")
-                unless viewing_doc
-                    // |limit
-                    // .ui.dropdown
-                    //     span.text dropdown
-                    //     i.dropdown.icon
-                    //     .menu 
-                    //         +skve k='limit' v=1 l='1'
-                    //         +skve k='limit' v=10 l='10'
-                    //         .item 1
-                    //         .item 5
-                    //         .item 10
-                    //         .item 20
-                    // |sort
-                    // +skve k='sort_key' v='_timestamp' l='when'
-                    // +skve k='sort_key' v='bounty' l='bounty'
-                    // +skve k='sort_direction' v=-1 l='up'
-                    // +skve k='sort_direction' v=1 l='down'
-                    // |view
-                    // +skve k='view_mode' v='cards' l='cards' i='squared-menu' ionly=true
-                    // +skve k='view_mode' v='list' l='list' i='list' ionly=true
-                
-            .eight.wide.column
-                .ui.segment
-                    .ui.header 
-                        i.large.reddit.icon
-                        |reddit
-                    .ui.cards
-                        each docs
-                            +doc
-                
+                    // div(class="{{#unless viewing_doc}} eleven wide column {{else}} sixteen wide column {{/unless}}")
+                    unless viewing_doc
+                        // |limit
+                        // .ui.dropdown
+                        //     span.text dropdown
+                        //     i.dropdown.icon
+                        //     .menu 
+                        //         +skve k='limit' v=1 l='1'
+                        //         +skve k='limit' v=10 l='10'
+                        //         .item 1
+                        //         .item 5
+                        //         .item 10
+                        //         .item 20
+                        // |sort
+                        // +skve k='sort_key' v='_timestamp' l='when'
+                        // +skve k='sort_key' v='bounty' l='bounty'
+                        // +skve k='sort_direction' v=-1 l='up'
+                        // +skve k='sort_direction' v=1 l='down'
+                        // |view
+                        // +skve k='view_mode' v='cards' l='cards' i='squared-menu' ionly=true
+                        // +skve k='view_mode' v='list' l='list' i='list' ionly=true
+                    
+                .eight.wide.column
+                    .ui.segment
+                        .ui.header 
+                            i.large.reddit.icon
+                            |reddit
+                        .ui.cards
+                            each docs
+                                +doc
+                    
                 //     +session_edit_value_button k='view_section' v='tone' l='tone' i='smile'
                 
                 
@@ -262,8 +264,9 @@ template(name="doc")
             
                 
 template(name='view_mode')
-    i.link.zoomer.icon.toggle_view(class="#{toggle_view_class} #{thinking_class}" title=k)
-
+    a.ui.large.tertiary.button.toggle_view
+        i.link.zoomer.icon(class="#{toggle_view_class} #{thinking_class}" title=k)
+        |#{k}
 
 template(name='emotion_mode')
     i.link.zoomer.icon.toggle_emotion(class="#{toggle_emotion_class} #{thinking_class}" title=t)
