--- a/parts/client/dao.jade
+++ b/parts/client/dao.jade
@@ -1,7 +1,7 @@
 template(name='dao')
     .ui.stackable.grid
         .row
-            .twelve.wide.center.aligned.column
+            .sixteen.wide.column
                 if skv_is 'thinking' true
                     i.big.yin.yang.loading.icon
                 // unless viewing_doc
@@ -21,11 +21,6 @@ template(name='dao')
                 //     i.smile.large.grey.icon
                 //     |emotion
                 // .spacer
-                +emotion_mode k='joy' i='happy--v1' i2='smile' c='invert green'
-                +emotion_mode k='sadness' i='sad--v1' i2='sad tear' c='invert blue'
-                +emotion_mode k='anger' i='angry--v1' i2='frown' c='invert red'
-                +emotion_mode k='disgust' i='disgusting' i2='grin tongue squint' c='invert orange'
-                +emotion_mode k='fear' i='scream' i2='tired' c='black'
                 each selected_emotions
                     .ui.black.compact.button.unselect_emotion
                         |#{this}
@@ -37,7 +32,12 @@ template(name='dao')
                 .spacer
                 // .five.wide.right.aligned.column
                 // .eleven.wide.column
-            .four.wide.center.aligned.column
+            .four.wide.column
+                +emotion_mode k='joy' i='happy--v1' i2='smile' c='invert green'
+                +emotion_mode k='sadness' i='sad--v1' i2='sad tear' c='invert blue'
+                +emotion_mode k='anger' i='angry--v1' i2='frown' c='invert red'
+                +emotion_mode k='disgust' i='disgusting' i2='grin tongue squint' c='invert orange'
+                +emotion_mode k='fear' i='scream' i2='tired' c='black'
                 .ui.inline.header 
                     i.users.large.grey.icon
                     |group
@@ -59,7 +59,7 @@ template(name='dao')
                         |#{name}
                 i.smile.large.icon
                 div
-            .four.wide.center.aligned.column
+                // .four.wide.center.aligned.column
                 +view_mode k='twitter' i='twitter' c='blue'
                 +view_mode k='video' i='youtube' c='red'
                 +view_mode k='image' i='picture' c='green'
@@ -71,14 +71,31 @@ template(name='dao')
                 // +view_mode k='porn' i='mercury'
                 +view_mode k='bitcoin' i='bitcoin disabled'
                 +view_mode k='covid' i='covid disabled'
-            .eight.wide.column
-                with search_doc
-                    .ui.segment
-                        .ui.header search doc
-                        .ui.header searched #{input_count} times
-                        each searchers
-                            .ui.header #{username}
-                
+            .six.wide.column.scrolling
+                .ui.segment
+                    .ui.header 
+                        i.large.reddit.icon
+                        |reddit
+                    .ui.cards
+                        each docs
+                            +doc
+                    
+            .six.wide.column
+                .ui.segment
+                    .ui.header search doc
+                    .ui.header searched #{input_count} times
+                    each searchers
+                        .ui.header #{username}
+                // with search_doc
+                .ui.segment
+                    +comments
+                .ui.segment 
+                    |requests
+                .ui.segment
+                    |offers
+                .ui.segment 
+                    |photos
+            
                 .ui.segment
                     .ui.header
                         i.large.wikipedia.icon
@@ -127,15 +144,6 @@ template(name='dao')
                         // |view
                         // +skve k='view_mode' v='cards' l='cards' i='squared-menu' ionly=true
                         // +skve k='view_mode' v='list' l='list' i='list' ionly=true
-                    
-                .eight.wide.column
-                    .ui.segment
-                        .ui.header 
-                            i.large.reddit.icon
-                            |reddit
-                        .ui.cards
-                            each docs
-                                +doc
                     
                 //     +session_edit_value_button k='view_section' v='tone' l='tone' i='smile'
                 
@@ -264,12 +272,14 @@ template(name="doc")
             
                 
 template(name='view_mode')
-    a.ui.large.tertiary.button.toggle_view
+    a.ui.tertiary.basic.button.toggle_view
         i.link.zoomer.icon(class="#{toggle_view_class} #{thinking_class}" title=k)
         |#{k}
 
 template(name='emotion_mode')
-    i.link.zoomer.icon.toggle_emotion(class="#{toggle_emotion_class} #{thinking_class}" title=t)
+    .ui.tertiary.button.toggle_emotion
+        i.link.zoomer.icon(class="#{toggle_emotion_class} #{thinking_class}" title=t)
+        |#{k}
     // if selected_emotion
     //     i.huge.pointer.zoomer.icon.toggle_emotion(class="#{i2} #{color}" title=t)
     //     // img.ui.inline.image.toggle_emotion.zoomer.pointer(src="https://img.icons8.com/color/50/000000/#{icon}.png" class=cl title=t)
