--- a/parts/blocks.jade
+++ b/parts/blocks.jade
@@ -19,7 +19,7 @@ template(name='comments_view_small')
         .meta
             each doc_comments 
                 i.grey.chat.outline.icon
-                img.ui.avatar.image(src="{{c.url _author.profile_image_id height=200 width=200 gravity='face' crop='fill'}}" class=user_class)
+                // img.ui.avatar.image(src="{{c.url _author.profile_image_id height=200 width=200 gravity='face' crop='fill'}}" class=user_class)
                 |#{body}
                 div
 
@@ -105,13 +105,7 @@ template(name='comments')
     .ui.comments
         each doc_comments
             .comment
-                unless anon
-                    a.avatar
-                        img.ui.avatar.image(src="{{c.url _author.profile_image_id height=500 width=500 gravity='face' crop='fill'}}") 
                 .content
-                    unless anon
-                        a.author(href="/u/#{_author_username}")
-                            |#{_author_username}
                     .metadata
                         span.date #{when}
                     .text
@@ -120,236 +114,23 @@ template(name='comments')
                         if can_edit
                             +remove_icon
                         // else
-                        +voting_small
-                        +anon_toggle
-
-
-template(name='anon_toggle')
-    if anon
-        i.lock.link.icon.toggle(title='show user info')
-    else
-        i.users.link.icon.toggle(title='hide author info')
+                        i.thumbs.up.icon
+                        i.thumbs.down.icon
     
-
-template(name='viewing')
-    if currentUser
-        unless viewed_by
-            .ui.icon.button.mark_viewed(title='mark read')
-                i.eye.icon
-        else 
-            //- if is_dev
-            .ui.icon.button.mark_unread(title='mark unread')
-                i.eye.slash.icon
-    else 
-        i.eye.icon
-    .ui.grey.inline.header 
-        |viewers
-    each viewer_ids
-        +user_info
-
-
-
-template(name='events_column')
-    .ui.accordion
-        h4.active.title
-            //- i.rss.icon
-            | log
-            i.dropdown.icon
-        .active.content
-            .ui.feed
-                each log_events
-                    .event
-                        .label
-                            img.ui.rounded.image(src="{{c.url object.image width=400 height=400 gravity='face' crop='fill'}}")
-                        .content
-                            .summary
-                                |#{body}
-                                .date
-                                    |#{when}
-                                if is_dev
-                                    +remove_button
 
 template(name='loading')
     i.massive.yin.yang.loading.grey.icon
-
-
-template(name='month_selector')
-    +key_value_edit key='month' value='jan'
-    +key_value_edit key='month' value='feb'
-    +key_value_edit key='month' value='mar'
-    +key_value_edit key='month' value='april'
-    +key_value_edit key='month' value='may'
-    +key_value_edit key='month' value='jun'
-    +key_value_edit key='month' value='jul'
-    +key_value_edit key='month' value='aug'
-    +key_value_edit key='month' value='sep'
-    +key_value_edit key='month' value='oct'
-    +key_value_edit key='month' value='nov'
-    +key_value_edit key='month' value='dec'
-
-
-
-template(name='follow')
-    .ui.segment
-        .ui.header
-            i.user.plus.icon
-            |follow
-        +user_list_toggle key='follower_ids' icon='rss' add_label='Follow' remove_label='Unfollow' color='black'
 
 
 template(name='toggle_edit')
     .ui.basic.button.toggle_edit
         i.pencil.icon
 
-template(name='user_list_info')
-    a.ui.basic.button.item(href="/u/#{user.username}/view")
-        img.ui.avatar.image(src=user.profile.profilePic title=name)
-        |#{user.profile.name}
-        +user_status user
-
-
-
-template(name='user_status')
-    if online 
-        // .ui.label(class='{{labelClass}}') 
-        .ui.empty.label(title='online')
-        // img.ui.avatar.image(src="https://img.icons8.com/connection-user_status-on/color/48" title='Online' width="48" height="48")
-        // |Online
-    else if idle
-        .ui.empty.yellow.label(title='idle')
-        // .ui.label(class='{{labelClass}}') Idle
-    // else 
-    //     |Offline
-// template(name='user_card')
-//     with user
-//         .ui.small.horizontal.card
-//             .image
-//                 img.ui.rounded.mini.image(src="{{c.url profile_image_id width=300 height=300 gravity='face' crop='fill'}}")
-//             .content    
-//                 a.header(href="/u/#{username}") #{first_name} #{last_name} 
-//                 //- .meta @#{username}
-//                 strong $#{credit}
-//                 small credit
-//                 //- +emails_edit    
-//         //- +user_status user
-template(name='small_horizontal_user_card')
-    with user
-        .ui.small.horizontal.card
-            .image
-                if profile_photo
-                    img.ui.rounded.tiny.image(src="{{c.url profile_photo width=200 height=200 gravity='face' crop='fill'}}")
-                else if image_id
-                    img.ui.rounded.image(src="{{c.url image_id width=300 height=300 gravity='face' crop='fill'}}")
-                else if image_id
-                    img.ui.rounded.image(src="{{c.url image_id width=300 height=300 gravity='face' crop='fill'}}")
-            .content    
-                a.header(href="/student/#{username}") #{first_initial} #{last_name} 
-                //- .meta @#{username}
-                //- span(title='points')
-                //-     |#{points} pts
-                //- span(title='points')
-                //-     |#{points} 
-                //-     i.yin.yang.icon
-                each tags
-                    .ui.small.basic.label #{this}
-                if is_admin
-                    div
-                    +user_email
-                //- +emails_edit    
-        +user_status user
-
-
-template(name='user_email')
-    .ui.small.inline.header #{email_address}
-    if email_verified
-        .ui.basic.label 
-            i.checkmark.icon
-            |verified
-    else
-        .ui.label 
-            i.ban.icon
-            |unverified
-        
-
-template(name='big_user_card')
-    with user
-        //- .ui.card
-        //- .ui.card(class=student_status_class)
-        .ui.card
-            .image
-                img.ui.rounded.image(src="{{c.url image_id width=300 height=300 gravity='face' crop='fill'}}")
-            .content
-                a.header(href="/u/#{username}")
-                     |#{first_name} #{last_name} 
-                    //- .meta @#{username}
-                    //- +array_view key='tags' label='Tags' direct=true
-template(name='user_info')
-    a.ui.image.basic.label(href="/u/#{user.username}/")
-        if user.profile_image_id
-            img.ui.avatar.image.superzoom(src="{{c.url user.profile_image_id width=300 height=300 gravity='face' crop='fill'}}")
-        //- .visible.content
-        |#{user.shortname}
-        // |@#{user.username}
-        // +user_status user
-template(name='user_info_small')
-    a(href="/u/#{user.username}/")
-        if user.profile_image_id
-            img.ui.avatar.image(src="{{c.url user.profile_image_id width=300 height=300 gravity='face' crop='fill'}}" title=name)
-        else
-            i.user.outline.icon(title=user.name)
-
-template(name='user_info_tiny')
-    a(href="/u/#{user.username}/")
-        // if user.profile_image_id
-        //     img.ui.avatar.image(src="{{c.url user.profile_image_id width=300 height=300 gravity='face' crop='fill'}}" title=name)
-        // else
-        //     i.user.outline.icon(title=user.name)
-        .ui.basic.tiny.label #{user.shortname}
-
-template(name='user_avatar')
-    if user.profile_image_id
-        img.ui.avatar.image(src="{{c.url user.profile_image_id width=300 height=300 gravity='face' crop='fill'}}" title=name)
-    else
-        i.user.outline.icon(title=user.name)
-
-
-template(name='username_info')
-    .ui.small.compact.basic.button.goto_profile
-        if is_student
-            img.ui.tiny.image(src="{{c.url user.profile_image_id width=100 height=100}}")
-        |#{user.name}
-        //- |@#{user.username}
-        +user_status user
-
-
-template(name='role_editor')
-    each roles
-        .ui.basic.button #{this}
-
-template(name='author_info')
-    with _author
-        a.ui.compact.basic.tertiary.button(href="/u/#{username}")
-            if profile_image_id
-                img.ui.avatar.image(src="{{c.url profile_image_id width=100 height=100 gravity='face' crop='fill'}}")
-            |by #{username}
-            
-template(name='target_info')
-    with target
-        a.ui.compact.basic.tertiary.button(href="/u/#{username}")
-            if profile_image_id
-                img.ui.avatar.image(src="{{c.url profile_image_id width=100 height=100 gravity='face' crop='fill'}}")
-            |to #{username}
 
 template(name='creation_info')
     .ui.small.inline.header #{when}
 
 
-template(name='user_list_toggle')
-    if currentUser
-        .ui.icon.compact.button.toggle(class=user_list_toggle_class title=label)
-            i.large.icon(class=icon)
-            // |#{label}
-        //- each list_users
         //-     +user_info
 template(name='doc_array_togggle')
     if currentUser
@@ -378,11 +159,7 @@ template(name='bookmark_button')
         //-     +user_info
 template(name='voting')
     i.thumbs.up.large.link.icon.upvote(class=upvote_class title='upvote')
-    each upvoter_ids
-        +user_info_small
     i.thumbs.down.large.link.icon.downvote(class=downvote_class title='downvote')
-    each downvoter_ids
-        +user_info_small
     if is_dev
         +number_edit key='points' label='edit points' direct=true
     if points
@@ -390,25 +167,6 @@ template(name='voting')
     if anon_points
         strong #{anon_points} anon pts
     
-
-template(name='voting_small')
-    if points
-        strong #{points}
-    i.thumbs.up.link.icon.upvote(class=upvote_class)
-    // |#{upvoter_ids.length}
-    each upvoter_ids
-        +user_info_tiny
-    i.thumbs.down.link.icon.downvote(class=downvote_class)
-    each downvoter_ids
-        +user_info_tiny
-
-template(name='voting_tiny')
-    i.thumbs.up.icon(class=upvote_class)
-    // |#{upvoter_ids.length}
-    each upvoter_ids
-        +user_avatar
-
-
 
 
 template(name='voting_full')
@@ -423,22 +181,6 @@ template(name='voting_full')
         |&nbsp;
         span(title='points') #{points} pts
         //- .ui.large.basic.label(title='anon points') #{anon_points} anon pts
-    if currentUser
-        if upvoter_ids
-            div
-            .ui.small.grey.inline.header(title='upvoters')
-                i.thumbs.up.outline.green.icon
-                // |upvoters
-            each upvoter_ids
-                +user_info
-        if downvoter_ids
-            div
-            .ui.small.grey.inline.header(title='downvoters')
-                i.thumbs.down.outline.icon
-                // |downvoters
-            each downvoter_ids
-                +user_info
-
 
 
 template(name='remove_button')
@@ -458,43 +200,6 @@ template(name='toggle_button')
 
 
             
-template(name='email_validation_check')
-    //- if email_verified
-    //-     .ui.large.basic.button
-    //-         i.checkmark.icon
-    //-         |email validated
-    unless email_verified
-        .ui.basic.fluid.button.send_verification
-            //- i.user.shield.icon
-            |resend verification email
-        if times
-            .ui.label
-                |#{times}
-            //- else
-                //- |#{times}x sent
-        if is_staff
-            .ui.button.toggle_email_verified
-                |mark email verified
-        
-        
-
-template(name='user_array_list')
-    .ui.list
-        each users
-            .item
-                +user_info
-
-            
-template(name='user_array_element_toggle')
-    .ui.compact.button.toggle_element(class=user_array_element_toggle_class)
-        |#{value}
-
-template(name='user_string_toggle')
-    .ui.button.toggle_element(class=user_string_element_toggle_class)
-        |#{value}
-
-
-
 template(name='key_value_edit')
     a.ui.compact.large.circular.button.set_key_value(class=set_key_value_class title=value href='#')
         if i
@@ -506,15 +211,6 @@ template(name='key_value_edit')
             else 
                 |#{v}
         
-template(name='user_key_value_edit')
-    .ui.compact.button.set_key_value(class=set_key_value_class)
-        if icon 
-            i.icon(class=icon)
-        if label
-            |#{label}
-        else 
-            |#{value}
-
 
 template(name='session_key_value')
     .ui.button.set_session_value(class=button_class) 
