--- a/parts/client/style.css
+++ b/parts/client/style.css
@@ -11,7 +11,7 @@ body {
   -webkit-font-smoothing: antialiased; 
   -moz-osx-font-smoothing: grayscale;
 
-  background: rgba(200,200,200,1) !important;
+  /*background: rgba(200,200,200,1) !important;*/
   /*filter: invert(.7) !important; */
   /*overscroll-behavior: none; */
   /*transition: all .15s ease !important;*/
